--- a/src/components/DevSection/MusicQuizApp/MusicQuizApp.css
+++ b/src/components/DevSection/MusicQuizApp/MusicQuizApp.css
@@ -20,12 +20,9 @@
   position: relative;
   margin-top: 50px;
   bottom: 0;
+  animation: fadeIn 0.5s ease-in-out forwards;
 }
 
-.fadeIn {
-  opacity: 0;
-  animation: fadeIn 1s 1s ease-in-out forwards;
-}
 @media only screen and (min-width: 700px) {
   #screenshot-music-quiz-desktop {
     background-image: url("./music-quiz-image.jpg");
@@ -48,9 +45,5 @@
     position: relative;
     margin-top: 50px;
     bottom: 0;
-  }
-  .fadeIn {
-    opacity: 0;
-    animation: fadeIn 1s 1s ease-in-out forwards;
   }
 }
